--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -1,13 +1,87 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 850px) {
     
-    .navbar {
+    .navbar{
         position: relative;
     }
-    .navbar li {
-        display:none ;
+    .navbar .menu-bar{
+        display: block;
+        grid-column: 8 / 9;
+        font-size: 1em;
+        cursor: pointer;
+        
     }
-    .menu-bar{
-        display: flex;
-        justify-content: flex-end;
+
+    .navbar .menu{
+        position: absolute;
+        width: 100%;
+        height: 600px;
+        display: grid;
+        align-items: center;
+        background-color:white;
+        margin-top:650px;
+        color: white;
+        transform: translateX(250%);
+        transition: transform 1s;
+    }
+    .navbar .menu-toggle{
+        transform: translateX(0%);
+        transition: transform 1s;
+    }
+    
+}
+
+@media only screen and (max-width: 690px){
+
+    .logo-marcas img{
+        height: 150px;
+        width: 150px;
+        margin-left: 20px;
+    }
+
+}
+
+@media only screen and (max-width: 520px){
+    .logo-marcas img{
+        height: 130px;
+        width: 130px;
+        margin-left: 20px;
+    }
+}
+
+@media only screen and (max-width: 430px){
+    .head{
+        margin-left: 1px;
+    }
+    .head h3{
+        font-size: 1.8rem;   
+    }
+    .head h1{
+        font-size: 2.5rem;    
+    }
+    .head p{
+        font-size: 0.8rem;
+        text-align: start;
+        margin-left: 10px;
+     }
+    .btn{
+        font-size: 1.5rem; 
+        margin-left: 10px;
+    }
+    .servicios h2{
+        font-size: 2.8rem;
+        margin-left: 10px;
+    }
+    .servicios p{
+        font-size: 0.8rem;
+        margin-left: 10px;
+    }
+    .logo-marcas img{
+        height: 120px;
+        width: 120px;
+        margin-left: 20px;
+    }
+    .marcas p{
+        font-size: 0.8rem;
+        margin-left: 10px;
     }
 }
