--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,7 @@ body{
    text-decoration: none;
    text-align: center;
 }
+/*
 .social{
    text-align: center;
    padding-top: 50px;
@@ -295,6 +296,42 @@ body{
    background-color: #1085fb;
    border-radius: 10px;
 }
+*/
+.social-icons {
+    padding: 0;
+    list-style: none;
+    display: flex;
+}
+
+.social-icons li {
+    margin: 0 20px;
+}
+
+.social-icons li a {
+    border: 3px solid #1085fb;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #1085fb;
+    border-radius: 50%;
+    border-right: none;
+    border-top: none;
+    transition: 0.3s ease;
+}
+
+.social-icons li a:hover {
+    border-top: 3px solid;
+    border-right: 3px solid;
+    transform: rotate(360deg);
+    background-color: #1085fb;
+    border-color: white;
+    color: white;
+}
+
+
 
 
 /* PRODCUTOS */
