--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,7 +1,8 @@
 
 // Colors
 $Transparent:transparent;
-$MainColor:#1085fb;
-$SecondaryColor:#0a52cb;
-$PcolorB:#010132;
-$PcolorW:#d8d6fe;
+$MainColor:#0d80f1;
+$SecondaryColor:#85b8ed;
+$PcolorB:#1c1c1c;
+$PcolorW:#dde2e4;
+$PcolorG: #7a7a7a;
