--- a/css/main.css
+++ b/css/main.css
@@ -394,4 +394,19 @@ header h1 {
 section h2 {
   color: #0d80f1;
   font-family: "Roboto", sans-serif;
+}
+
+.btn {
+  background-color: #0d80f1;
+  border: none;
+}
+.btn a {
+  color: #1c1c1c;
+}
+
+.pServicios {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.3rem;
+  font-weight: 200;
+  color: #1c1c1c;
 }/*# sourceMappingURL=main.css.map */
