--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,11 +1,11 @@
 
 // Colors
-$Transparent:transparent;
-$MainColor:#0d80f1;
-$SecondaryColor:#85b8ed;
-$PcolorB:#1c1c1c;
-$PcolorW:#dde2e4;
-$PcolorG: #7a7a7a;
+$transparent:transparent;
+$mainColor:#0d80f1;
+$secondaryColor:#85b8ed;
+$pcolorB:#1c1c1c;
+$pcolorW:#dde2e4;
+$pcolorG: #7a7a7a;
 
 
 
